feat: add 5 routers
